<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="awa-Ye-O28" customClass="shapedButton" customModule="AnchorApplication" customModuleProvider="target">
                                <rect key="frame" x="20" y="131" width="335" height="80"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homeIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Ved-Zn-BWc">
                                <rect key="frame" x="39" y="54" width="37" height="48"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAL-Dl-gC7">
                                <rect key="frame" x="84" y="54" width="108" height="48"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Decision Survey" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UW4-qM-Brh">
                                <rect key="frame" x="16" y="61" width="290" height="48"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
...
                                <rect key="frame" x="98" y="315" width="179" height="36"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                <state key="normal" title="Dopamine Agonists"/>
                                <connections>
                                    <segue destination="MbY-Ce-Pgy" kind="show" id="oXg-9r-b1M"/>
...
                                <rect key="frame" x="142" y="315.5" width="91" height="36"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                <state key="normal" title="Levodopa"/>
                                <connections>
                                    <segue destination="alL-GR-f6N" kind="show" id="B8d-TE-cR3"/>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adjustment Survey" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xkL-D4-dAd">
                                <rect key="frame" x="16" y="49" width="343" height="48"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Drug Class" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r52-Np-ne2">
                                <rect key="frame" x="32" y="50" width="197" height="48"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a drug class:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="64T-fU-X6O">
                                <rect key="frame" x="32" y="133" width="169" height="24"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                            <items>
                                <navigationItem title="Levodopa" id="KWE-Fo-aUf">
                                    <barButtonItem key="leftBarButtonItem" title="Back" id="fog-oD-o2j">
                                        <connections>
                                            <segue destination="RlQ-Fo-xwm" kind="showDetail" id="oPL-hB-4rm"/>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Progress Monitor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4b-RW-VWj">
                                <rect key="frame" x="90" y="20" width="195" height="30"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
...
